increase container top spacing to avoid header overlap on mobile

--- a/components/shared/layout/Layout/Layout.module.scss
+++ b/components/shared/layout/Layout/Layout.module.scss
@@ -31,6 +31,7 @@
 @media only screen and (max-width: 1180px) {
   .container {
     padding-top: 72px;
+    margin-top: 20px;
   }
 }
 
